@@ -1320,6 +1320,11 @@ WIDGET_DEFAULT = {
         "bkg_color_laptime": "#2A2A2A",
         "font_color_player_laptime": "#000000",
         "bkg_color_player_laptime": "#BBBBBB",
+        "show_highlighted_fastest_last_laptime": True,
+        "font_color_fastest_last_laptime": "#FF44FF",
+        "bkg_color_fastest_last_laptime": "#2A2A2A",
+        "font_color_player_fastest_last_laptime": "#AA00AA",
+        "bkg_color_player_fastest_last_laptime": "#BBBBBB",
         "show_position_in_class": True,
         "font_color_position_in_class": "#CCCCCC",
         "bkg_color_position_in_class": "#444444",
@@ -1685,6 +1690,11 @@ WIDGET_DEFAULT = {
         "bkg_color_laptime": "#2A2A2A",
         "font_color_player_laptime": "#000000",
         "bkg_color_player_laptime": "#BBBBBB",
+        "show_highlighted_fastest_last_laptime": True,
+        "font_color_fastest_last_laptime": "#FF44FF",
+        "bkg_color_fastest_last_laptime": "#2A2A2A",
+        "font_color_player_fastest_last_laptime": "#AA00AA",
+        "bkg_color_player_fastest_last_laptime": "#BBBBBB",
         "show_best_laptime": False,
         "font_color_best_laptime": "#AAAAAA",
         "bkg_color_best_laptime": "#2A2A2A",
